# db-center-template

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  README_CN.md  cargo-generate.toml  how_to_use_ai.md
.codex/: AGENTS.md  BUILD_RULES.md  PROTOCOL.md
AI_PROTOCOLS/: AI_WORKFLOW.md  BUILD_RULES.md  ERROR_CODE_GUIDE.md  LLM_CLIENT_GUIDE.md  MIGRATION_GUIDE.md  PROTOCOL.md  TABLE_ADDING_PROTOCOL.md  WEB_SERVER_GUIDE.md
API_CONTRACTS/: README.md  a.md  admin.md  app.md  common.md  sse.md  ws.md
ai_protocols/: AI_WORKFLOW.md  AUTH_INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  REPO_GUIDE.md  SERVICE_GUIDE.md  TABLE_ADDING_PROTOCOL.md  WEB_SERVER_GUIDE.md
config/: services-example.toml
crates/error-code/: Cargo.toml
crates/error-code/src/: admin.rs  app.rs  lib.rs
crates/migration/: Cargo.toml  README.md
crates/migration/src/: lib.rs  m20260414_000001_create_admin_rbac_tables.rs  m20260414_000001_create_rbac_tables.rs  m20260414_000002_alter_user_roles_user_id_to_uuid.rs  m20260414_000002_create_app_rbac_tables.rs  m20260414_000002_create_menus_table.rs  m20260421_015859_create_admin_users_table.rs  m20260422_000003_add_admin_user_profile_fields.rs  m20260424_000001_use_permission_id_for_role_permissions.rs  m20260424_000002_add_rbac_foreign_keys.rs  m20260425_000001_delete_root_role_permissions.rs
crates/repo/: Cargo.toml  README.md
crates/repo/src/: lib.rs
crates/repo/src/entity/: admin_menus.rs  admin_permissions.rs  admin_role_permissions.rs  admin_roles.rs  admin_user_roles.rs  admin_users.rs  app_permissions.rs  app_role_permissions.rs  app_roles.rs  app_user_roles.rs  app_users.rs  menus.rs  mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  user_roles.rs
crates/repo/src/table/: dto.rs  mod.rs
crates/repo/src/table/admin_menus/: dto.rs  service.rs
crates/repo/src/table/admin_permissions/: dto.rs  service.rs
crates/repo/src/table/admin_role_permissions/: dto.rs  service.rs
crates/repo/src/table/admin_roles/: dto.rs  mod.rs  service.rs
crates/repo/src/table/admin_user_roles/: dto.rs  service.rs
crates/repo/src/table/admin_users/: dto.rs  service.rs
crates/repo/src/table/app_permissions/: dto.rs  service.rs
crates/repo/src/table/app_role_permissions/: service.rs
crates/repo/src/table/app_roles/: dto.rs  service.rs
crates/repo/src/table/app_user_roles/: dto.rs  service.rs
crates/repo/src/table/app_users/: dto.rs  service.rs
crates/repo/src/table/menus/: dto.rs  service.rs
crates/repo/src/table/permissions/: dto.rs  service.rs
crates/repo/src/table/role_permissions/: dto.rs  service.rs
crates/repo/src/table/roles/: service.rs
crates/repo/src/table/user_roles/: service.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
crates/service/src/api/: admin.rs  app.rs  mod.rs
crates/service/src/dto/: admin.rs  app.rs  mod.rs
crates/web-server/: Cargo.toml
crates/web-server/examples/: llm_vision_smoke.rs
crates/web-server/src/: lib.rs  logging.rs  main.rs  settings.rs
crates/web-server/src/clients/: auth_client.rs
crates/web-server/src/dto/: admin.rs  app.rs  auth_example.rs  common.rs  mod.rs  sse.rs  ws.rs
crates/web-server/src/error/: error_code.rs  mod.rs
crates/web-server/src/handlers/: admin.rs  app.rs  auth_example.rs  mod.rs  sse.rs  ws.rs
crates/web-server/src/handlers/admin/: app.rs  mod.rs  rbac.rs
crates/web-server/src/handlers/app/: mod.rs
crates/web-server/src/notifications/: dto.rs  mod.rs  service.rs
crates/web-server/src/routes/: admin.rs  app.rs  auth_example.rs  mod.rs  sse.rs  ws.rs
crates/web-server/src/routes/admin/: access.rs  account.rs  mod.rs  rbac.rs
crates/web-server/src/routes/app/: mod.rs
crates/web-server/src/statics/: db_manager.rs  llm_client.rs  mod.rs  request_client.rs  ws_hub.rs
crates/web-server/src/utils/: llm.rs  llm_integration.rs  mod.rs
scripts/: README.md  clear_db.sh  common.sh  fresh_db.sh  generate_entity.sh  init_app_permissions.sh  init_db.sh  init_permissions.sh  init_root.sh  migrate.sh  postgres.sh  truncate_table.sh
user_docs/: core_design.md  environment_setup_with_ai.md  how_to_use_ai.md  requirement_template.md  requirement_to_backend_doc.md
