[workspace]
members = [
    "crates/*",
]

resolver = "3"

[workspace.package]
version = "{{version}}"
edition = "2024"
description = "{{description}}"
authors = ["{{authors}}"]

[workspace.dependencies]
tokio = { version = "1" }
thiserror = "2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-appender = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15"
validator = { version = "0.20", features = ["derive"] }
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
async-trait = "0.1"
db_core = { package = "db-core-rs", version = "0.1.1" }

# individual crates
repo = { path = "crates/repo" }
service = { path = "crates/service" }
