[package]
name = "web-server"
edition.workspace = true
version.workspace = true

[dependencies]
# internal dependencies
db-core.workspace = true
service.workspace = true
error-code.workspace = true

# external dependencies
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
async-stream = "0.3"
futures-util = "0.3"
axum = {version = "=0.8.9", features = ["macros", "multipart", "ws"]}
toolcraft-axum-kit = {version = "0.2.10"}
toolcraft-config= {version = "0.2.0"}
toolcraft-jwt= {version = "0.3.6"}
toolcraft-request= {version = "0.2.3"}
toolcraft-utils= {version = "0.2.2"}
model-gateway-rs = { version = "0.2.4" }
